--- a/css/styles.css
+++ b/css/styles.css
@@ -2,18 +2,25 @@ body{
     margin: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
+    font-size: 2em;
 }
 
 h1{
-    margin-top: 0;
+    color: #0081C9;
+    font-size: 5.625rem;
+    margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
 }
 
 h2{
+    color: #0081C9;
     font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    font-weight: normal;
 }
 
 h3{
+    color: #5BC0F8;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -27,6 +34,13 @@ h3{
 }
 
 .bottom-container{
+}
+
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 2;
 }
 
 .pro{
@@ -44,4 +58,18 @@ h3{
     position: absolute;
     right: 300px;
     top: 50px;
+}
+.cskills{
+    width: 35%;
+    float: left;
+    margin-right: 30px;
+}
+
+.football-skills{
+    width: 35%;
+    height: 35%;
+    float: right;
+}
+.description{
+    
 }
