--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,35 @@
 body{
+    color: #40514E;
     margin: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
     font-size: 2em;
 }
+p{
+    line-height: 1.5;
+}
+hr{
+    border: dotted #EAF6F6 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
+}
+a{
+    color: #2192FF; 
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    margin: 10px 20px;
+    text-decoration: none;
+}
+a:hover{
+    color: #86E5FF;
+}
+.copyright{
+    font-size: 18px;
+    color: #86E5FF;
+    font-size: 10px;
+}
+
 
 h1{
     color: #0081C9;
@@ -17,6 +43,7 @@ h2{
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
     font-weight: normal;
+    padding-bottom: 10px;
 }
 
 h3{
@@ -31,20 +58,26 @@ h3{
 }
 
 .middle-container{
+    margin: 100px 0;
 }
 
 .bottom-container{
+    background-color: #0081C9;
+    padding: 50px 0 20px;
 }
 
 .skill-row{
     width: 50%;
     margin: 100px auto 100px auto;
     text-align: left;
-    line-height: 2;
 }
 
 .pro{
     text-decoration: underline;
+}
+.into{
+    width: 25%;
+    margin: auto;
 }
 
 .bottom-cloud{
@@ -71,5 +104,38 @@ h3{
     float: right;
 }
 .description{
-    
+
 }
+.contact-message{
+    width: 40%;
+    margin: 40px auto 60px;
+}
+
+.btn {
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+  }
+
+
